# podman-compose-mgr

./: .gitignore  AGENTS.md  AZURE_INTEGRATION.md  CLAUDE.md  Cargo.toml  USAGE_EXAMPLE.md  debug_azure.rs  debug_azure_all.sh  test_azure_connection.sh
.cargo/: config.toml
.trunk/: trunk.yaml
doc/: README.md  secrets_retrieve.md
docs/: Dockerfile_scan.md  MVU.md  README.md  TODO.md
mock_podman/: Cargo.toml
mock_podman/data/: ddns_build.txt  rclone_build.txt
mock_podman/src/: main.rs
scripts/cpu_test_runner/: Cargo.toml
src/: args.rs  build.rs  compose_finder.rs  docker_build.rs  errors.rs  image_build.rs  image_cmd.rs  image_restart.rs  interfaces.rs  lib.rs  main.rs  podman.rs  ports.rs  read_val.rs  rebuild.rs  restartsvcs.rs  secrets.rs  start.rs  walk_dirs.rs
src/app/: image_details.rs  inference.rs  mod.rs
src/args/: initialization.rs  mod.rs  types.rs  validators.rs
src/cli_mvu/: mod.rs  model.rs  prompt_helpers.rs  update.rs
src/domain/: mod.rs
src/helpers/: cmd_helper_fns.rs  podman_helper_fns.rs
src/image_build/: buildfile.rs  buildfile_build.rs  buildfile_error.rs  buildfile_helpers.rs  buildfile_types.rs  container_file.rs  image.rs  mod.rs  prompt.rs  rebuild.rs  rebuild_error.rs  rebuild_helpers.rs  rebuild_yaml.rs  ui.rs
src/infra/: discovery_adapter.rs  discovery_helpers.rs  discovery_types.rs  interrupt_adapter.rs  podman_adapter.rs
src/mvu/: mod.rs
src/read_interactive_input/: format.rs  helpers.rs  mod.rs  prompt_data.rs  types.rs
src/secrets/: azure.rs  b2_storage.rs  debug.rs  error.rs  file_details.rs  initialize.rs  json_utils.rs  mod.rs  models.rs  prompt.rs  r2_storage.rs  retrieve_prompt.rs  s3_storage_base.rs  upload.rs  upload_handlers.rs  upload_prompt.rs  upload_utils.rs  user_prompt.rs  utils.rs  validation.rs  validation_prompt.rs
src/testing/: mod.rs  stdin_helpers.rs  test_utils.rs  validation_helpers.rs
src/tui/: app.rs  discover.rs  mod.rs  simulate.rs  ui.rs
src/utils/: build_logger.rs  cmd_utils.rs  error_utils.rs  json_utils.rs  log_utils.rs  mod.rs  path_utils.rs  podman_utils.rs
tests/: README.md  azure_credential_test.rs  azure_integration_test.rs  test02_tui.rs  test03_tui_keys.rs  test04_tui_view.rs  test05_tui_view_modal.rs  test06_tui_subfolder_view.rs  test07_tui_rebuild.rs  test08_one_shot_tui_dockerfile_view.rs  test1.rs  test10_no_base64_r2_and_az.rs  test11_ctrlc.rs  test12_secret_migrate.rs  test12_secret_migrate_main.rs  test12_secret_migrate_mvp.rs  test12_secret_migrate_simple.rs  test1_walk_dirs_varying_term_size.rs  test2.rs  test20_cli_prompt_format.rs  test2_azure_client.rs  test3.rs  test3_sec_init.rs  test3_secret_init.rs  test4_secret_upload.rs  test5_b2_upload.rs  test6_r2_upload.rs  test7_new_init_fmt.rs  test8_base64.rs  test9_output_entries.rs  test9_r2_output_entry.rs
tests/test08/: golden.json
tests/test12/: input.json  reference_output.json
tests/test3/: test_input.json
(+144 files in other folders)
