[package]
name = "podman-compose-mgr"
version = "0.1.4"
edition = "2024"


[dependencies]
walkdir = "2"
regex = "1"
clap = { version = "4", features = ["derive"] }
#term_size = "0"
chrono = "0"
serde_yaml = "0"
dockerfile-parser = "0"
reqwest = { version = "0", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0"
tokio = { version = "1", features = ["full"] }
# Use specific versions that are known to work
azure_identity = "0.21"
azure_security_keyvault = "0"
azure_core = "0"
time = "0"
hostname = "0"
terminal_size = "0"
mockall = "0"
thiserror = "1"
async-trait = "0"
home = "0"
# New dependencies for enhanced secrets management
sha1 = "0.10"
hex = "0.4"
opendal = { version = "0.52.0", features = ["services-b2"] }
base64 = "0.21"
utf8-read = "0.4"
async-std = "1.12"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"  # Use the latest version
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
