[package]
name = "podman-compose-mgr"
version = "0.1.6"
edition = "2024"

[lints.rust]
unsafe_code = "deny"

[dependencies]
reedline = "0"
walkdir = "2"
regex = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0"
serde_yaml = "0"
dockerfile-parser = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0"
mockall = "0"
thiserror = "2"
home = "0"
tempfile = "3"  # For temporary file operations
ratatui = "0"
crossterm = "0"
ctrlc = "3"
rust-ini = "0"
crossbeam-channel = "0"


[dev-dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0", features = ["signal", "process"] }

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0", features = ["Win32_System_Console"] }
